Did a few UI tweaks on the viz details view layout:   ++Navigation controls no longer overflow to the right when "Delete Viz" button squeezes in;   ++Wider code area;   ++higher console area;   ++Added "overflow: auto;" to the console area

--- a/cubetube/static/css/base.css
+++ b/cubetube/static/css/base.css
@@ -308,7 +308,7 @@ button {
  * -- Shows the vizualization, and code editor
  */
 .viz-wrapper {
-  width: 800px;
+  width: 815px; /*800px;*/
   border-top: 118px solid #f9f9f9;
   height: 100%; }
   .viz-wrapper .round-button {
@@ -342,12 +342,12 @@ button {
     padding-left: 10px;
     padding-right: 10px;
     position: fixed;
-    width: 800px;
+    width: 815px; /*800px;*/
     background: #fff;
     top: 58px;
     z-index: 2; }
   .viz-wrapper .viz-demo {
-    width: 800px;
+    width: 815px; /*800px;*/
     height: 410px;
     background: #1c1521;
     position: relative;
@@ -469,10 +469,10 @@ button {
     padding-top: 58px;
     position: fixed;
     top: 0px;
-    left: 800px;
+    left: 910px;
     border: 0px;
     height: 100%;
-    width: 600px;
+    width: 690px;
     //overflow: hidden;
     z-index: 2; }
     .viz-wrapper .viz-code .CodeMirror {
@@ -487,7 +487,7 @@ button {
       border: 0px;
       outline: 0px; }
   .viz-wrapper.code-active .viz-nav {
-    padding-right: 310px; }
+    padding-right: 223px; }
   .viz-wrapper.code-active .viz-code {
     -webkit-transform: translateX(-300px);
     -moz-transform: translateX(-300px);
@@ -497,19 +497,19 @@ button {
   .viz-wrapper.code-active .viz-demo,
   .viz-wrapper.code-active canvas {
     position: relative;
-    width: 500px;
+    width: 610px;
     outline: 0; }
 
 .viz-template {
   position: fixed;
   top: 0px;
   right: 0px;
-  width: 800px;
+  width: 815px; /*800px;*/
   height: 100%;
   border: 0;
   z-index: 2; }
   .viz-template.more-open {
-    width: 1100px; }
+    width: 1300px; }
 
 .create-template {
   position: fixed;
